--- a/package.json
+++ b/package.json
@@ -1,44 +1,23 @@
 {
-  "name": "next",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^5.1.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-rc.1",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-pro-sidebar": "^0.7.1",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "styled-components": "^5.3.3",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "name": "next-step",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server/server.js",
+    "scripts": {
+      "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+      "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+      "start:prod": "cd server && npm start",
+      "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+      "install": "cd server && npm i && cd ../client && npm i",
+      "seed": "cd server && npm run seed",
+      "heroku-postbuild": "cd client && npm run build"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+      "if-env": "^1.0.4"
+    },
+    "devDependencies": {
+      "concurrently": "^5.1.0"
+    }
   }
-}
