--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server/server.js",
     "scripts": {
       "prestart": "cd server && npm run seed",
-      "start": "node server/server.js",
+      "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
       "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
       "start:prod": "cd server && npm start",
       "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
