--- a/client/package.json
+++ b/client/package.json
@@ -1,51 +1,49 @@
 {
-  "name": "next",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@apollo/react-hooks": "^4.0.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "apollo-boost": "^0.4.9",
-    "apollo-link-context": "^1.0.20",
-    "bootstrap": "^5.1.1",
-    "graphql": "^15.7.2",
-    "graphql-tag": "^2.12.6",
-    "jwt-decode": "^3.1.2",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-rc.1",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-pro-sidebar": "^0.7.1",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "styled-components": "^5.3.3",
-    "typewriter-effect": "^2.18.2",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "next-step",
+    "version": "0.1.0",
+    "private": true,
+    "proxy": "http://localhost:3001/",
+    "dependencies": {
+        "@apollo/react-hooks": "^3.1.5",
+        "@stripe/stripe-js": "^1.20.3",
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.5.0",
+        "@testing-library/user-event": "^7.2.1",
+        "apollo-boost": "^0.4.9",
+        "apollo-link-context": "^1.0.20",
+        "bootstrap": "^5.1.1",
+        "graphql": "^14.7.0",
+        "graphql-tag": "^2.12.5",
+        "jwt-decode": "^2.2.0",
+        "react": "^16.14.0",
+        "react-bootstrap": "^2.0.0-rc.1",
+        "react-dom": "^16.14.0",
+        "react-icons": "^4.3.1",
+        "react-router": "^6.0.2",
+        "react-router-dom": "^4.3.1",
+        "react-scripts": "^3.4.1",
+        "react-transition-group": "^4.4.2",
+        "styled-components": "^5.3.3"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
