--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,25 +1,77 @@
+// {
+//   "short_name": "React App",
+//   "name": "Create React App Sample",
+//   "icons": [
+//     {
+//       "src": "favicon.ico",
+//       "sizes": "64x64 32x32 24x24 16x16",
+//       "type": "image/x-icon"
+//     },
+//     {
+//       "src": "logo192.png",
+//       "type": "image/png",
+//       "sizes": "192x192"
+//     },
+//     {
+//       "src": "logo512.png",
+//       "type": "image/png",
+//       "sizes": "512x512"
+//     }
+//   ],
+//   "start_url": ".",
+//   "display": "standalone",
+//   "theme_color": "#000000",
+//   "background_color": "#ffffff"
+// }
+
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
   "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
+      {
+          "src": "./icons/icon-512x512.png",
+          "sizes": "512x512",
+          "type": "image/png"
+      },
+      {
+          "src": "./icons/icon-384x384.png",
+          "sizes": "384x384",
+          "type": "image/png"
+      },
+      {
+          "src": "./icons/icon-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+      },
+      {
+          "src": "./icons/icon-152x152.png",
+          "sizes": "152x152",
+          "type": "image/png"
+      },
+      {
+          "src": "./icons/icon-144x144.png",
+          "sizes": "144x144",
+          "type": "image/png"
+      },
+      {
+          "src": "./icons/icon-128x128.png",
+          "sizes": "128x128",
+          "type": "image/png"
+      },
+      {
+          "src": "./icons/icon-96x96.png",
+          "sizes": "96x96",
+          "type": "image/png"
+      },
+      {
+          "src": "./icons/icon-72x72.png",
+          "sizes": "72x72",
+          "types": "image/png"
+      }
   ],
-  "start_url": ".",
+  "name": "Next Step",
+  "short_name": "Next",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "start_url": "./index.html",
+  "description": "A supplemental learning platform",
+  "background_color": "#a6bfcc",
+  "theme_color": "#4085c0"
 }
