--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "engines": {
-      "node": "16.13.0"
+      "node": ">14.17.4"
     },
     "main": "server/server.js",
     "scripts": {
