--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "1.0.0",
     "description": "",
     "main": "server/server.js",
+    "engines": {
+      "node": "16.13.0"
+    },
     "scripts": {
       "prestart": "cd server && npm run seed",
       "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
