--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-    "name": "next-step",
-    "version": "1.0.0",
-    "description": "",
-    "main": "server/server.js",
-    "scripts": {
-      "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-      "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-      "start:prod": "cd server && npm start",
-      "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-      "install": "cd server && npm i && cd ../client && npm i",
-      "seed": "cd server && npm run seed",
-      "heroku-postbuild": "cd client && npm run build"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "if-env": "^1.0.4"
-    },
-    "devDependencies": {
-      "concurrently": "^5.1.0"
-    }
+  "name": "next-step",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server/server.js",
+  "scripts": {
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "start:prod": "cd server && npm start",
+    "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "seed": "cd server && npm run seed",
+    "heroku-postbuild": "cd client && npm run build"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "if-env": "^1.0.4",
+    "node": "^16.13.0",
+    "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "concurrently": "^5.1.0"
   }
+}
